--- a/aurad-cli/src/containers/docker/docker-compose.yml
+++ b/aurad-cli/src/containers/docker/docker-compose.yml
@@ -5,9 +5,7 @@ services:
         image: parity/parity:v2.2.7
         env_file: aurad_config.env
         volumes:
-            - type: bind
-              source: ${HOME}/.aurad/eth
-              target: /eth
+            - parity:/eth
         command: ["--light", "--on-demand-retry-count=100", "--jsonrpc-interface=all", "--base-path", "/eth"]
         ports:
             - "8545:8545"
@@ -16,6 +14,9 @@ services:
             - "30303:30303/udp"
         stop_signal: SIGINT
         stop_grace_period: 20s
+        working_dir: /eth
+        entrypoint: /home/parity/bin/parity
+        user: root
     mysql:
         image: mysql:5.7
         env_file: aurad_config.env
@@ -51,3 +52,5 @@ services:
           - RPC_PORT
         links:
           - "mysql:db.local"
+volumes:
+  parity:
