--- a/aurad-cli/package.json
+++ b/aurad-cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@auroradao/aurad-cli",
-  "version": "0.1.2",
+  "name": "@auroradao/aurad-cli-dev",
+  "version": "0.1.3-rc3",
   "bin": {
     "aura": "./bin/run"
   },
