--- a/aurad-cli/src/containers/docker/docker-compose.yml
+++ b/aurad-cli/src/containers/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
             
 services:
     parity:
-        image: parity/parity:v2.2.9
+        image: parity/parity:v2.2.11
         env_file: aurad_config.env
         volumes:
             - parity:/eth
@@ -22,7 +22,7 @@ services:
         stop_signal: SIGINT
         stop_grace_period: 20s
         working_dir: /eth
-        entrypoint: /home/parity/bin/parity
+        entrypoint: /bin/parity
         user: root
     mysql:
         image: mysql:5.7
