pass STAKING_HOST in docker compose

--- a/aurad-cli/src/containers/docker/docker-compose.yml
+++ b/aurad-cli/src/containers/docker/docker-compose.yml
@@ -64,6 +64,7 @@ services:
           - RPC_HOST
           - RPC_PROTOCOL
           - RPC_PORT
+          - STAKING_HOST
         links:
           - "mysql:db.local"
 volumes:
