--- a/aurad-cli/src/containers/docker/docker-compose.yml
+++ b/aurad-cli/src/containers/docker/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         ports:
             - "127.0.0.1:33006:3306"
     aurad:
-        image: auroradao/aurad-dev:0.1.3
+        image: auroradao/aurad:0.1.3
         depends_on:
           - "mysql"
         volumes:
