--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "require-all": "^3.0.0",
     "sequelize": "^4.40.0",
     "typedarray-to-buffer": "^3.1.5",
-    "web3": "^1.0.0-beta.46",
+    "web3": "1.0.0-beta.36",
     "websocket": "^1.0.28",
     "write-file-atomic": "^2.3.0"
   },
