--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.6",
-    "sequelize-cli": "^5.3.0"
+    "sequelize-cli": "^5.3.0",
+    "toxiproxy-node-client": "^2.0.6"
   },
   "engines": {
     "node": ">=10.0.0"
