--- a/aurad-cli/src/containers/docker/docker-compose.yml
+++ b/aurad-cli/src/containers/docker/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.3'
             
 services:
     parity:
-        image: parity/parity:v2.2.11
+        image: parity/parity:v2.3.9
         env_file: aurad_config.env
         volumes:
             - parity:/eth
-        command: ["--light", "--on-demand-retry-count=100", "--jsonrpc-interface=all", "--base-path", "/eth"]
+        command: ["--light", "--jsonrpc-interface=all", "--base-path", "/eth"]
         ports:
             - "127.0.0.1:8545:8545"
             - "8546:8546"
@@ -36,7 +36,7 @@ services:
         ports:
             - "127.0.0.1:33006:3306"
     aurad:
-        image: auroradao/aurad:0.1.3
+        image: auroradao/aurad:0.1.4
         depends_on:
           - "mysql"
         volumes:
