include SSL vars in docker compose, bump version for npm test

--- a/aurad-cli/src/containers/docker/docker-compose.yml
+++ b/aurad-cli/src/containers/docker/docker-compose.yml
@@ -61,6 +61,8 @@ services:
           - RPC_PROTOCOL
           - RPC_PORT
           - STAKING_HOST
+          - SSL_PRIVATE_KEY_PATH
+          - SSL_CERT_PATH
         links:
           - "mysql:db.local"
     aurad:
